--- a/gai/index.html
+++ b/gai/index.html
@@ -1,1 +1,152 @@
-rf
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <div class="bg">
+    <ul class="menu-main">
+      <li><a href=""class="current">Каталог</a></li>
+      <li><a href="">Услуги</a></li>
+      <li><a href="">Стоимость</a></li>
+      <li><a href="">Оплата</a></li>
+      <li><a href="">Контакты</a></li>
+      <li><a href="2">Инфо</a></li>
+    </ul>
+    <a href="#1"><div class="h1text">ПОДОБРАТЬ АВТОМОБИЛЬ</div></a>
+  </div>
+  <div class="wrapper">
+    <input type="radio" name="point" id="slide1" checked>
+    <input type="radio" name="point" id="slide2">
+    <input type="radio" name="point" id="slide3">
+    <input type="radio" name="point" id="slide4">
+    <input type="radio" name="point" id="slide5">
+    <div class="slider">
+      <div class="slides slide1"></div>
+      <div class="slides slide2"></div>
+      <div class="slides slide3"></div>
+      <div class="slides slide4"></div>
+      <div class="slides slide5"></div>
+    </div>	
+    <div class="controls">
+      <label for="slide1"></label>
+      <label for="slide2"></label>
+      <label for="slide3"></label>
+      <label for="slide4"></label>
+      <label for="slide5"></label>
+    </div>
+  </div>
+  <div class="h2text">Популярные модели</a></div>
+  <div class="car">
+    <div class="content"> <img src="img/222.png" alt="">
+      <h3>Mercedes-Benz GLS</h3>
+    </div>
+    <div class="content1"> <img src="img/3.png" alt="">
+      <h3>Mercedes-Benz S-сlass</h3>
+    </div>
+    <div class="content2"> <img src="img/4.png" alt="">
+      <h3>Porsche 911 GT2</h3>
+    </div>
+  </div>
+  <div>
+    <div class="h2text" id="1">Классы автомобилей</div>
+    <div class="grid">
+      <div class="grid-item grid-one">
+        <img src="img/5.png" alt="">
+        <h3>Бизнес</h3>
+      </div>
+      <div class="grid-item grid-two">
+        <img src="img/6.png" alt="">
+        <h3>Представительский Класс</h3>
+      </div>
+      <div class="grid-item grid-three">
+        <img src="img/7.png" alt="">
+        <h3>Внедорожник </h3>
+      </div>
+      <div class="grid-item grid-four">
+        <img src="img/8.png" alt="">
+        <h3>Минивен</h3>
+      </div>
+      <div class="grid-item grid-five">
+        <img src="img/9.png" alt="">
+        <h3>Средний</h3>
+      </div>
+      <div class="grid-item grid-six">
+        <img src="img/10.png" alt="">
+        <h3>Спортивные </h3>
+      </div>
+    </div>
+  </div>
+  <div class="ddd">
+    <h2 class="h2text" id="2">Хотите арендовать автомобиль?</h2>
+    <div class="box-feedback1">
+      <img src="img/11.png" alt="">
+      <p>Копите мили с помощью бонусной карты и арендуйте автомобили бесплатно! Предложение действительно для всех
+        городов и стран, где есть наши станции проката. На карту клиента зачисляется не менее 10% от стоимости дневной
+        аренды, а 1 миля равна 1 рублю.</p>
+    </div>
+    <div class="box-feedback2">
+      <img src="img/12.png" alt="">
+      <p class="feedback">Все машины, которые мы предлагаем в аренду новые: не раньше 2015
+        года выпуска. Парк автомобилей постоянно обновляется, так как по специально разработанным стандартам машины
+        нашей компании не должны эксплуатироваться более двух лет.</p>
+    </div>
+    <div class="box-feedback3">
+      <img src="img/13.png" alt="">
+      <p class="box-feedback">Арендованный Вами автомобиль может быть подан в любую точку города, туда, где Вам будет
+        удобно забрать его. Это может быть Ваш адрес, любая станция метро, вокзал или аэропорт.</p>
+    </div>
+
+<form>
+  <li class="h2text">Обратная связь</li>
+    <input name="name" placeholder="Укажите ваше имя!" class="name" required />
+    <input name="emailaddress" placeholder="Укажите ваш Email!" class="email" type="email" required />
+    <textarea rows="4" cols="50" name="subject" placeholder="Введите ваше сообщение:" class="message" required></textarea>
+    <input name="submit" class="btn" type="submit" value="Отправить" />
+</form>
+  </div>
+  <div class="podval">
+                <div class="footer-contact">
+                <div> <img src="img/14.svg" alt="">
+                    <h3>АДРЕС:</h3>
+                    <ul class="footer-contact-info">
+                      <li>Нефтеюганск</li>
+                        <li>ул.Ленина 28/4</li>
+                    </ul>
+                </div>
+                <div> <img src="img/15.svg" alt="">
+                    <h3>ТЕЛЕФОН:</h3>
+                    <ul class="footer-contact-info">
+                        <li>8 (888) 111-11-11</li>
+                        <li>8 (999) 999-99-99</li>
+                    </ul>
+                </div>
+                    <div> <img src="img/16.svg" alt="">
+                        <h3>ВРЕМЯ РАБОТЫ:</h3>
+                        <ul class="footer-contact-info">
+                            <li>ПН-СБ</li>
+                            <li>10:00 - 23:00</li>
+                        </ul>
+                </div>
+                <div> <img src="img/17.svg" alt="">
+                    <h3>E-MAIL:</h3>
+                    <ul class="footer-contact-info">
+                        <li>g.shahzod@mail.ru</li>
+                        <li>gaibov.@mail.ru</li>
+                    </ul>
+            </div>
+                </div>
+    </div>
+                    </div>
+                </div>
+            </div>
+</body>
+
+</html>
